lex_parser/y.output
Terminals unused in grammar

    REM
    NEQ
    STR
    BIN
    QUOTE
    ACCESS_OP1
    ACCESS_OP2
    INN_PROD


Grammar

    0 $accept: program $end

    1 program: func_stmt program
    2        | ε

    3 stmts: stmt_types stmts
    4      | ε

    5 stmt_types: assign_stmt SEMICOL
    6           | decl_stmt SEMICOL
    7           | if_stmt
    8           | for_stmt
    9           | while_stmt
   10           | return_stmt SEMICOL
   11           | void_fn_calls SEMICOL
   12           | inc_stmt SEMICOL

   13 func_stmt: ID d_type COLON OPEN_CIR_PAR argument CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR

   14 d_type: data_type data_type_arr

   15 data_type: INT
   16          | CINT
   17          | DOUBLE
   18          | CDOUBLE

   19 data_type_arr: OPEN_SQUARE_PAR CLOSE_SQUARE_PAR
   20              | ε

   21 if_stmt: CHOICE OPEN_CIR_PAR predicate CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR elif_stmt
   22        | CHOICE OPEN_CIR_PAR predicate CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR elif_stmt DEFAULT OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR

   23 elif_stmt: ALT OPEN_CIR_PAR predicate CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR elif_stmt
   24          | ε

   25 inc_stmt: ID REAL_INC
   26         | ID IMAG_INC
   27         | ID INC
   28         | ID DEC

   29 for_stmt: iter

   30 while_stmt: until

   31 decl_stmt: var_decl

   32 void_fn_calls: fn_call

   33 assign_stmt: ID ASSIGN exp_rhs
   34            | ID OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR ASSIGN exp_rhs

   35 return_stmt: RETURN exp_rhs

   36 predicate: exp_rhs GT exp_rhs
   37          | exp_rhs LT exp_rhs
   38          | exp_rhs EQ exp_rhs
   39          | exp_rhs NE exp_rhs
   40          | exp_rhs GE exp_rhs
   41          | exp_rhs LE exp_rhs
   42          | exp_rhs AND exp_rhs
   43          | exp_rhs OR exp_rhs
   44          | NEG exp_rhs

   45 exp_rhs: OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR
   46        | exp_rhs ARITH_OP exp_rhs
   47        | predicate
   48        | ID
   49        | INT_NUM
   50        | DOUBLE_NUM
   51        | fn_call
   52        | ID INC
   53        | ID DEC
   54        | INT_NUM INC
   55        | INT_NUM DEC
   56        | DOUBLE_NUM INC
   57        | DOUBLE_NUM DEC
   58        | ID OPEN_SQUARE_PAR exp_rhs CLOSE_SQUARE_PAR
   59        | OPEN_CIR_PAR exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

   60 fn_call: fn_type OPEN_CIR_PAR fn_args CLOSE_CIR_PAR
   61        | inbuilt_fn

   62 fn_args: exp_rhs COMMA fn_args
   63        | exp_rhs
   64        | ε

   65 fn_type: ID

   66 iter_fir_stmt: decl_stmt
   67              | assign_stmt
   68              | inc_stmt
   69              | ε

   70 iter_sec_stmt: predicate
   71              | ε

   72 iter_thir_stmt: assign_stmt
   73               | inc_stmt
   74               | ε

   75 iter: ITER OPEN_CIR_PAR iter_fir_stmt SEMICOL iter_sec_stmt SEMICOL iter_thir_stmt CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR

   76 until: UNTIL OPEN_CIR_PAR predicate CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR

   77 inbuilt_fn: real_fn
   78           | img_fn
   79           | pow_fn
   80           | polar_fn
   81           | conjugate_fn
   82           | mod_fn
   83           | arg_fn
   84           | angle_fn
   85           | dist_fn
   86           | cprint_fn
   87           | rotate_fn
   88           | get_line_fn
   89           | is_triangle_fn
   90           | get_centroid_fn
   91           | get_circumcenter_fn
   92           | get_orthocenter_fn
   93           | get_incenter_fn
   94           | get_excenter_fn
   95           | get_area_fn
   96           | get_perimeter_fn
   97           | print_fn

   98 real_fn: REAL OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR

   99 img_fn: IMG OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR

  100 pow_fn: POW OPEN_CIR_PAR exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  101 polar_fn: POLAR OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR

  102 conjugate_fn: CONJUGATE OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR

  103 mod_fn: MOD OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR

  104 arg_fn: ARG OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR

  105 angle_fn: ANGLE OPEN_CIR_PAR exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  106 dist_fn: DIST OPEN_CIR_PAR exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  107 cprint_fn: CPRINT OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR

  108 rotate_fn: ROTATE OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  109 get_line_fn: GET_LINE OPEN_CIR_PAR exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  110 is_triangle_fn: IS_TRIANGLE OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  111 get_centroid_fn: GET_CENTROID OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  112 get_circumcenter_fn: GET_CIRCUMCENTER OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  113 get_orthocenter_fn: GET_ORTHOCENTER OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  114 get_incenter_fn: GET_INCENTER OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  115 get_excenter_fn: GET_EXCENTER OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  116 get_area_fn: GET_AREA OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  117 get_perimeter_fn: GET_PERIMETER OPEN_CIR_PAR exp_rhs COMMA exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  118 print_arg: exp_rhs
  119          | STRING
  120          | STRING COMMA print_arg
  121          | exp_rhs COMMA print_arg

  122 print_fn: PRINT OPEN_CIR_PAR print_arg CLOSE_CIR_PAR

  123 var_decl: real_decl
  124         | comp_decl

  125 data_types: INT_NUM
  126           | DOUBLE_NUM

  127 real_decl: INT int_part
  128          | DOUBLE double_part

  129 int_part: int_id_type
  130         | int_id_type COMMA int_part

  131 int_id_type: ID
  132            | ID ASSIGN exp_rhs
  133            | ID OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR
  134            | ID OPEN_CIR_PAR INT_NUM CLOSE_CIR_PAR OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR

  135 double_part: double_id_type
  136            | double_id_type COMMA double_part

  137 double_id_type: ID
  138               | ID ASSIGN exp_rhs
  139               | ID OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR
  140               | ID OPEN_CIR_PAR data_types CLOSE_CIR_PAR OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR

  141 comp_decl: CINT cint_part
  142          | CDOUBLE cdouble_part

  143 cint_part: cint_id_type
  144          | cint_id_type COMMA cint_part

  145 cint_id_type: ID
  146             | ID OPEN_CIR_PAR INT_NUM CLOSE_CIR_PAR
  147             | ID OPEN_CIR_PAR INT_NUM COMMA INT_NUM CLOSE_CIR_PAR
  148             | ID OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR
  149             | ID OPEN_CIR_PAR INT_NUM CLOSE_CIR_PAR OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR
  150             | ID OPEN_CIR_PAR INT_NUM COMMA INT_NUM CLOSE_CIR_PAR OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR

  151 cdouble_part: cdouble_id_type
  152             | cdouble_id_type COMMA cdouble_part

  153 cdouble_id_type: ID
  154                | ID OPEN_CIR_PAR data_types CLOSE_CIR_PAR
  155                | ID OPEN_CIR_PAR data_types COMMA data_types CLOSE_CIR_PAR
  156                | ID OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR
  157                | ID OPEN_CIR_PAR data_types CLOSE_CIR_PAR OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR
  158                | ID OPEN_CIR_PAR data_types COMMA data_types CLOSE_CIR_PAR OPEN_SQUARE_PAR INT_NUM CLOSE_SQUARE_PAR

  159 argument: argument_list
  160         | argument_list COMMA argument

  161 argument_list: T L
  162              | ε

  163 T: INT
  164  | CINT
  165  | DOUBLE
  166  | CDOUBLE

  167 L: ID
  168  | ID OPEN_SQUARE_PAR CLOSE_SQUARE_PAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ITER (258) 75
    PRINT (259) 122
    UNTIL (260) 76
    RETURN (261) 35
    REM (262)
    NEQ (263)
    OR (264) 43
    NEG (265) 44
    AND (266) 42
    INT (267) 15 127 163
    CINT (268) 16 141 164
    DOUBLE (269) 17 128 165
    CDOUBLE (270) 18 142 166
    STR (271)
    STRING (272) 119 120
    BIN (273)
    REAL (274) 98
    IMG (275) 99
    POW (276) 100
    POLAR (277) 101
    CONJUGATE (278) 102
    MOD (279) 103
    ARG (280) 104
    ANGLE (281) 105
    DIST (282) 106
    CPRINT (283) 107
    ROTATE (284) 108
    CHOICE (285) 21 22
    ALT (286) 23
    DEFAULT (287) 22
    GET_LINE (288) 109
    IS_TRIANGLE (289) 110
    GET_CENTROID (290) 111
    GET_CIRCUMCENTER (291) 112
    GET_ORTHOCENTER (292) 113
    GET_INCENTER (293) 114
    GET_EXCENTER (294) 115
    GET_AREA (295) 116
    GET_PERIMETER (296) 117
    ID (297) 13 25 26 27 28 33 34 48 52 53 58 65 131 132 133 134 137 138 139 140 145 146 147 148 149 150 153 154 155 156 157 158 167 168
    SEMICOL (298) 5 6 10 11 12 75
    COMMA (299) 59 62 100 105 106 108 109 110 111 112 113 114 115 116 117 120 121 130 136 144 147 150 152 155 158 160
    COLON (300) 13
    QUOTE (301)
    GT (302) 36
    LT (303) 37
    EQ (304) 38
    NE (305) 39
    INC (306) 27 52 54 56
    DEC (307) 28 53 55 57
    ASSIGN (308) 33 34 132 138
    LE (309) 41
    GE (310) 40
    INT_NUM (311) 34 49 54 55 125 133 134 139 140 146 147 148 149 150 156 157 158
    DOUBLE_NUM (312) 50 56 57 126
    ARITH_OP (313) 46
    ACCESS_OP1 (314)
    ACCESS_OP2 (315)
    INN_PROD (316)
    OPEN_CIR_PAR (317) 13 21 22 23 45 59 60 75 76 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 122 134 140 146 147 149 150 154 155 157 158
    CLOSE_CIR_PAR (318) 13 21 22 23 45 59 60 75 76 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 122 134 140 146 147 149 150 154 155 157 158
    OPEN_CURLY_PAR (319) 13 21 22 23 75 76
    CLOSE_CURLY_PAR (320) 13 21 22 23 75 76
    OPEN_SQUARE_PAR (321) 19 34 58 133 134 139 140 148 149 150 156 157 158 168
    CLOSE_SQUARE_PAR (322) 19 34 58 133 134 139 140 148 149 150 156 157 158 168
    REAL_INC (323) 25
    IMAG_INC (324) 26


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    program (71)
        on left: 1 2
        on right: 0 1
    stmts (72)
        on left: 3 4
        on right: 3 13 21 22 23 75 76
    stmt_types (73)
        on left: 5 6 7 8 9 10 11 12
        on right: 3
    func_stmt (74)
        on left: 13
        on right: 1
    d_type (75)
        on left: 14
        on right: 13
    data_type (76)
        on left: 15 16 17 18
        on right: 14
    data_type_arr (77)
        on left: 19 20
        on right: 14
    if_stmt (78)
        on left: 21 22
        on right: 7
    elif_stmt (79)
        on left: 23 24
        on right: 21 22 23
    inc_stmt (80)
        on left: 25 26 27 28
        on right: 12 68 73
    for_stmt (81)
        on left: 29
        on right: 8
    while_stmt (82)
        on left: 30
        on right: 9
    decl_stmt (83)
        on left: 31
        on right: 6 66
    void_fn_calls (84)
        on left: 32
        on right: 11
    assign_stmt (85)
        on left: 33 34
        on right: 5 67 72
    return_stmt (86)
        on left: 35
        on right: 10
    predicate (87)
        on left: 36 37 38 39 40 41 42 43 44
        on right: 21 22 23 47 70 76
    exp_rhs (88)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 58 59 62 63 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 121 132 138
    fn_call (89)
        on left: 60 61
        on right: 32 51
    fn_args (90)
        on left: 62 63 64
        on right: 60 62
    fn_type (91)
        on left: 65
        on right: 60
    iter_fir_stmt (92)
        on left: 66 67 68 69
        on right: 75
    iter_sec_stmt (93)
        on left: 70 71
        on right: 75
    iter_thir_stmt (94)
        on left: 72 73 74
        on right: 75
    iter (95)
        on left: 75
        on right: 29
    until (96)
        on left: 76
        on right: 30
    inbuilt_fn (97)
        on left: 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
        on right: 61
    real_fn (98)
        on left: 98
        on right: 77
    img_fn (99)
        on left: 99
        on right: 78
    pow_fn (100)
        on left: 100
        on right: 79
    polar_fn (101)
        on left: 101
        on right: 80
    conjugate_fn (102)
        on left: 102
        on right: 81
    mod_fn (103)
        on left: 103
        on right: 82
    arg_fn (104)
        on left: 104
        on right: 83
    angle_fn (105)
        on left: 105
        on right: 84
    dist_fn (106)
        on left: 106
        on right: 85
    cprint_fn (107)
        on left: 107
        on right: 86
    rotate_fn (108)
        on left: 108
        on right: 87
    get_line_fn (109)
        on left: 109
        on right: 88
    is_triangle_fn (110)
        on left: 110
        on right: 89
    get_centroid_fn (111)
        on left: 111
        on right: 90
    get_circumcenter_fn (112)
        on left: 112
        on right: 91
    get_orthocenter_fn (113)
        on left: 113
        on right: 92
    get_incenter_fn (114)
        on left: 114
        on right: 93
    get_excenter_fn (115)
        on left: 115
        on right: 94
    get_area_fn (116)
        on left: 116
        on right: 95
    get_perimeter_fn (117)
        on left: 117
        on right: 96
    print_arg (118)
        on left: 118 119 120 121
        on right: 120 121 122
    print_fn (119)
        on left: 122
        on right: 97
    var_decl (120)
        on left: 123 124
        on right: 31
    data_types (121)
        on left: 125 126
        on right: 140 154 155 157 158
    real_decl (122)
        on left: 127 128
        on right: 123
    int_part (123)
        on left: 129 130
        on right: 127 130
    int_id_type (124)
        on left: 131 132 133 134
        on right: 129 130
    double_part (125)
        on left: 135 136
        on right: 128 136
    double_id_type (126)
        on left: 137 138 139 140
        on right: 135 136
    comp_decl (127)
        on left: 141 142
        on right: 124
    cint_part (128)
        on left: 143 144
        on right: 141 144
    cint_id_type (129)
        on left: 145 146 147 148 149 150
        on right: 143 144
    cdouble_part (130)
        on left: 151 152
        on right: 142 152
    cdouble_id_type (131)
        on left: 153 154 155 156 157 158
        on right: 151 152
    argument (132)
        on left: 159 160
        on right: 13 160
    argument_list (133)
        on left: 161 162
        on right: 159 160
    T (134)
        on left: 163 164 165 166
        on right: 161
    L (135)
        on left: 167 168
        on right: 161


State 0

    0 $accept: • program $end

    ID  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program    go to state 2
    func_stmt  go to state 3


State 1

   13 func_stmt: ID • d_type COLON OPEN_CIR_PAR argument CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR

    INT      shift, and go to state 4
    CINT     shift, and go to state 5
    DOUBLE   shift, and go to state 6
    CDOUBLE  shift, and go to state 7

    d_type     go to state 8
    data_type  go to state 9


State 2

    0 $accept: program • $end

    $end  shift, and go to state 10


State 3

    1 program: func_stmt • program

    ID  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program    go to state 11
    func_stmt  go to state 3


State 4

   15 data_type: INT •

    $default  reduce using rule 15 (data_type)


State 5

   16 data_type: CINT •

    $default  reduce using rule 16 (data_type)


State 6

   17 data_type: DOUBLE •

    $default  reduce using rule 17 (data_type)


State 7

   18 data_type: CDOUBLE •

    $default  reduce using rule 18 (data_type)


State 8

   13 func_stmt: ID d_type • COLON OPEN_CIR_PAR argument CLOSE_CIR_PAR OPEN_CURLY_PAR stmts CLOSE_CURLY_PAR

    COLON  shift, and go to state 12


State 9

   14 d_type: data_type • data_type_arr

    OPEN_SQUARE_PAR  shift, and go to state 13

    $default  reduce using rule 20 (data_type_arr)

    data_type_arr  go to state 14
